Bug fix: same spacing for line numbers on the left and the right

--- a/README
+++ b/README
@@ -236,3 +236,4 @@ Version 1.63a   Moved TQUANT to TQC
 
 Version 1.64    Produce error if abstract is entered after maketitle
 		(previously abstract was silently dropped)
+		Bug fixes for line numbering
