Changed ISSN in samples.  Jumped version number

--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -36,7 +36,7 @@
 \acmBooktitle{Woodstock '18: ACM Symposium on Neural Gaze Detection,
   June 03--05, 2018, Woodstock, NY} 
 \acmPrice{15.00}
-\acmISBN{978-1-4503-9999-9/18/06}
+\acmISBN{978-1-4503-XXXX-X/18/06}
 %</manuscript|sigconf|authordraft|sigplan|sigchi|sigchi-a|acmsmall-conf>
 
 %<*acmsmall|acmlarge|acmtog>
