typo: 'typset' -> 'typeset'

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -525,7 +525,7 @@
 % their e-mails in one command leads to a warning or an error.  This
 % is not a bug, but the expected behavior.
 %
-% Note that some formats do not typset e-mails or ORCID identifiers.
+% Note that some formats do not typeset e-mails or ORCID identifiers.
 % Do not worry: the metadata tools will get them.
 %
 % Sometimes an author has several affiliations.  In this case, the
@@ -1283,7 +1283,7 @@
 % not in the printed version.  The text inside the environment
 % |screenonly| will be typeset only when the option |screen| (see
 % Section~\ref{sec:invocation}) is set to |true|.  Conversely, the
-% text inside the environment |printonly| is typset only when this
+% text inside the environment |printonly| is typeset only when this
 % option is set to |false|.  For example,
 % \begin{verbatim}
 % \section{Supplementary materials}
