--- a/README
+++ b/README
@@ -237,3 +237,5 @@ Version 1.63a   Moved TQUANT to TQC
 Version 1.64    Produce error if abstract is entered after maketitle
 		(previously abstract was silently dropped)
 		Bug fixes for line numbering
+
+Version 1.65   Bug fixes
