--- a/acmart.dtx
+++ b/acmart.dtx
@@ -112,7 +112,6 @@
 %  Enrico Gregorio,
 %  Jamie Davis,
 %  Peter Kemp,
-%  Kerry A. Seitz, Jr.,
 %  Luis Leiva,
 %  Ben Liblit,
 %  Rholais Lii,
@@ -130,6 +129,8 @@
 %  Matteo Riondato,
 %  Craig Rodkin,
 %  Bernard Rous,
+%  Feras Saad,
+%  Kerry A. Seitz, Jr.,
 %  David Shamma,
 %  Gabriel Scherer,
 %  Stephen Spencer,
