--- a/acmart.dtx
+++ b/acmart.dtx
@@ -133,6 +133,7 @@
 %  Kerry A. Seitz, Jr.,
 %  David Shamma,
 %  Gabriel Scherer,
+%  Kartik Singhal,
 %  Stephen Spencer,
 %  Shin Hwei Tan,
 %  Daniel Thomas,
