ACM reference format is now mandatory for papers over one page CCS concepts and keywords are now mandatory for papers over two pages

--- a/README
+++ b/README
@@ -244,4 +244,6 @@ Version 1.65   Bug fixes
 
 Version 1.66   Bug fixes
 	       BibTeX change:  location is now a synonym for city (Feras Saad) 
-
+	       ACM reference format is now mandatory for papers over one page.
+	       CCS concepts and keywords are now mandatory for
+	       papers over two pages 
