--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -413,6 +413,9 @@ Rights information is unique to the work; if you are preparing several
 works for an event, make sure to use the correct set of commands with
 each of the works.
 
+The ACM Reference Format text is required for all articles over one
+page in length, and is optional for one-page articles (abstracts).
+
 \section{CCS Concepts and User-Defined Keywords}
 
 Two elements of the ``acmart'' document class provide powerful
@@ -430,8 +433,9 @@ User-defined keywords are a comma-separated list of words and phrases
 of the authors' choosing, providing a more flexible way of describing
 the research being presented.
 
-CCS concepts and user-defined keywords are required for all short- and
-full-length articles, and optional for two-page abstracts.
+CCS concepts and user-defined keywords are required for for all
+articles over two pages in length, and are optional for one- and
+two-page articles (or abstracts).
 
 \section{Sectioning Commands}
 
