--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -390,6 +390,8 @@ The article template's documentation, available at
 complete explanation of these commands and tips for their effective
 use.
 
+Note that authors' addresses are mandatory for journal articles.
+
 \section{Rights Information}
 
 Authors of any work published by ACM will need to complete a rights
