--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -215,16 +215,15 @@
   author        = "Sarah Cohen and Werner Nutt and Yehoshua Sagic",
   title         = "Deciding equivalances among conjunctive aggregate queries",
   journal       = JACM,
-  articleno     = "5",
-  numpages      = "50",
-  volume        = "54",
-  number        = "2",
+  articleno     = 5,
+  numpages      = 50,
+  volume        = 54,
+  number        = 2,
   month         = apr,
-  year          = "2007",
+  year          = 2007,
   doi           = "10.1145/1219092.1219093",
   url           = "http://doi.acm.org/10.1145/1219092.1219093",
-  acmid         = "1219093",
-  note          = "",
+  acmid         = 1219093,
 }
 
 
@@ -492,59 +491,38 @@ Editors= "Z. Ghahramani and R. Cowell"
 
 @Inproceedings{VanGundy07,
   author =       "Matthew Van Gundy and Davide Balzarotti and Giovanni Vigna",
-  year =         "2007",
+  year =         2007,
   title =        "Catch me, if you can: Evading network signatures with web-based polymorphic worms",
   booktitle =    "Proceedings of the first USENIX workshop on Offensive Technologies",
   series =       "WOOT '07",
   publisher =    "USENIX Association",
   address =      "Berkley, CA",
-  articleno =    "7",
-  numpages =     "9",
-  editor =       "",
-  volume =       "",
-  number =       "",
-  pages =        "",
-  month =        "",
-  organization = "",
-  note =         "",
+  articleno =    {Paper 7},
+  numpages =     9,
 }
 
 @Inproceedings{VanGundy08,
   author =       "Matthew Van Gundy and Davide Balzarotti and Giovanni Vigna",
-  year =         "2008",
+  year =         2008,
   title =        "Catch me, if you can: Evading network signatures with web-based polymorphic worms",
   booktitle =    "Proceedings of the first USENIX workshop on Offensive Technologies",
   series =       "WOOT '08",
   publisher =    "USENIX Association",
   address =      "Berkley, CA",
-  articleno =    "7",
-  numpages =     "2",
-  editor =       "",
-  volume =       "",
-  number =       "",
+  articleno =    7,
+  numpages =     2,
   pages =        "99-100",
-  month =        "",
-  organization = "",
-  note =         "",
 }
 
 @Inproceedings{VanGundy09,
   author =       "Matthew Van Gundy and Davide Balzarotti and Giovanni Vigna",
-  year =         "2009",
+  year =         2009,
   title =        "Catch me, if you can: Evading network signatures with web-based polymorphic worms",
   booktitle =    "Proceedings of the first USENIX workshop on Offensive Technologies",
   series =       "WOOT '09",
   publisher =    "USENIX Association",
   address =      "Berkley, CA",
-  articleno =    "",
-  numpages =     "",
-  editor =       "",
-  volume =       "",
-  number =       "",
   pages =        "90--100",
-  month =        "",
-  organization = "",
-  note =         "",
 }
 
 @Inproceedings{Andler79,
@@ -695,7 +673,7 @@ year = {2003},
   volume =       "12",
   number =       "3",
   month =        jul,
-  articleno =    "5",
+  articleno =    "Article~5",
   doi =          "",
   url =          "",
   howpublished = "",
@@ -720,14 +698,14 @@ year = {2003},
  author = {Werneck, Renato and Setubal, Jo\~{a}o and da Conceic\~{a}o, Arlindo},
  title = {(new) Finding minimum congestion spanning trees},
  journal = {J. Exp. Algorithmics},
- volume = {5},
+ volume = 5,
  month = dec,
- year = {2000},
+ year = 2000,
  issn = {1084-6654},
- articleno = {11},
+ articleno = 11,
  url = {http://portal.acm.org/citation.cfm?id=351827.384253},
  doi = {10.1145/351827.384253},
- acmid = {384253},
+ acmid = 384253,
  publisher = {ACM},
  address = {New York, NY, USA},
 }
