--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -617,7 +617,7 @@ suffix, of the \BibTeX\ file.
 Citations and references are numbered by default. A small number of
 ACM publications have citations and references formatted in the
 ``author year'' style; for these exceptions, please include this
-command in the {\bfseries preamble} (before
+command in the {\bfseries preamble} (before the command
 ``\verb|\begin{document}|'') of your \LaTeX\ source:
 \begin{verbatim}
   \citestyle{acmauthoryear}
