--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1842,7 +1842,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2020/02/02 v1.69 Typesetting articles for the Association for Computing Machinery]
+[2020/02/05 v1.69 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -4620,10 +4620,12 @@
 % \changes{v1.40}{2017/05/27}{Now we can parse |Significance~General| nodes}
 % \changes{v1.56}{2018/10/23}{End the concepts list with a period
 % (Philip Quinn)}
+% \changes{v1.69}{2019/02/05}{Added option |warn| to textcomp}
 %   The parser of the expression |Significance~General~Specific| (we need
 %   |textcomp| for |\textrightarrow|).  Note that |Specific| can be empty!
 %    \begin{macrocode}
 \RequirePackage{textcomp}
+\gdef\tc@errorwarn#1#2{}
 \def\ccsdesc@parse#1~#2~#3~{%
   \stepcounter{@concepts}%
   \expandafter\ifx\csname CCS@General@#2\endcsname\relax
