Use math right arrow in text

--- a/README
+++ b/README
@@ -258,3 +258,4 @@ Version 1.68   Bug fixes
 	       eid or articleno
 
 Version 1.69   Bug fixes
+	       Compatibility with LaTeX 2020-02-02 release
