--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -1598,3 +1598,32 @@ pages = "24--31"}
     {http://www.iesl.cs.umass.edu/data/data-umasscitationfield},
  lastaccessed = {May 27, 2019}
 }
+
+@Eprint{Bornmann2019,
+       author = {Bornmann, Lutz and Wray, K. Brad and Haunschild,
+                  Robin},
+        title = {Citation concept analysis {(CCA)}---A new form of
+                  citation analysis revealing the usefulness of
+                  concepts for other researchers illustrated by two
+                  exemplary case studies including classic books by
+                  {Thomas S.~Kuhn} and {Karl R.~Popper}},
+     keywords = {Computer Science - Digital Libraries},
+         year = 2019,
+        month = "May",
+          eid = {arXiv:1905.12410},
+archivePrefix = {arXiv},
+       eprint = {1905.12410},
+ primaryClass = {cs.DL},
+}
+
+@Eprint{AnzarootPBM14,
+  author    = {Sam Anzaroot and
+               Alexandre Passos and
+               David Belanger and
+               Andrew McCallum},
+  title     = {Learning Soft Linear Constraints with Application to
+                  Citation Field Extraction},
+  year      = {2014},
+  archivePrefix = {arXiv},
+  eprint    = {1403.1349},
+}
