--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -637,8 +637,9 @@ command in the {\bfseries preamble} (before the command
   symposium, workshop for example) (paginated proceedings article)
   \cite{Andler79}, a proceedings article with all possible elements
   \cite{Smith10}, an example of an enumerated proceedings article
-  \cite{VanGundy07}, an informally published work \cite{Harel78}, a
-  doctoral dissertation \cite{Clarkson85}, a master's thesis:
+  \cite{VanGundy07}, an informally published work \cite{Harel78},
+  a couple of preprints \cite{Bornmann2019, AnzarootPBM14}, 
+  a doctoral dissertation \cite{Clarkson85}, a master's thesis:
   \cite{anisi03}, an online document / world wide web resource
   \cite{Thornburg01, Ablamowicz07, Poker06}, a video game (Case 1)
   \cite{Obama08} and (Case 2) \cite{Novak03} and \cite{Lee05} and
