--- a/README
+++ b/README
@@ -259,3 +259,5 @@ Version 1.68   Bug fixes
 
 Version 1.69   Bug fixes
 	       Compatibility with LaTeX 2020-02-02 release
+
+Version 1.70   Title change for ACM/IMS Transactions on Data Science
