--- a/README
+++ b/README
@@ -261,3 +261,4 @@ Version 1.69   Bug fixes
 	       Compatibility with LaTeX 2020-02-02 release
 
 Version 1.70   Title change for ACM/IMS Transactions on Data Science
+               Bug fixes for bibliography
